project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: k3d-test-app-reg:5050/app2:4
