project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
